# sync-turn-whatsapp-attachments

./: .env.example  .gitignore  README.md  api-export.py  api_export.py  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: bq.yml  cron.yml  report.yml  send-on-slack.yml  sync-to-bigquery.yaml  sync-to-bigquery.yml  sync-to-warehouse.yaml  sync_andhra_pradesh_ccp.yaml  sync_andhra_pradesh_mlhp.yaml  sync_whatsapp_attachments.yaml
params/: bigquery.yml
src/: andhra_pradesh_ccp.py  andhra_pradesh_mlhp.py  turn_attachment.py  turn_attachments.py  utils.py
src/sync_turn_attachments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sync/: andhra_pradesh_ccp.py
utils/: utils.py
