[project]
name = "sync-turn-attachments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
    "google-crc32c>=1.5.0",
    "db-dtypes>=1.0.4",
    "oyaml>=1.0",
    "pyarrow>=18.1.0",
    "pygithub>=2.5.0",
    "requests>=2.32.3",
    "pandas>=1.3.0",
    "slack-sdk>=3.34.0"
]
